tests/agl/rejections/type/cast_bool_to_int.agl
let x: int = true as int
